Alpha 15.4 (??/??/????)
Current Level Cap: 25
- - - - - - - - - - - - -
This update brings further enhancements to the Alpha 15 experience.
A new accessory, the return of the music menu, changes to Player 4's offhand slot, and more!

Additions:
 - Added the Optic Charm.
 - The music menu is back!
 - Fadima now sells ATK/MAT/DEF/MDF scrolls.

Changes:
 - Rebalanced life/mana steal of staves:
  ~ Passion: PLS 5% → 10%
  ~ Mana Staff: PMS 10% → 5%
  ~ Life Crystal Staff: PLS 12.5% → 15%, MLS 5% → 7.5%
  ~ Mana Crystal Staff: PMS 15% → 10%
  ~ Harmony: PLS 12.5% → 15%, MLS 5% → 7.5%, PMS 15% → 10%
 - Rebalanced Dilong:
  ~ MHP: 45000 → 30000
  ~ MAT: 65 → 70
  ~ Draconic Healing Thresholds: 75% 50% 25% 10% → 80% 60% 40% 20%
 - Cloth Mask is dropped by Horrorspore, Tarantula, and Parasite instead of crafted.
 - Dismembered Eye can be dropped by Gazers.
 - Nerfed Glacial Bulwark drop rate from 20% to 5%.
 - Nerfed Bat Sling drop rate from 5% to 2%.
 - Ice II (Tome) now obtained in Frozen Labyrinth chest instead of dropped by Frozen Labyrinth enemies.
 - Removed the Blank Tome.
 - Adjusted tome prices.
 - Fiery Blood can be used to apply Burning Up!.
 - Renamed several equipment slots.
 - Removed Outgoing Elemental Damage in favor of just amplifying every element rate.
 - Reworked Attributes menu stat colorations.
 - Moved Fire Resistance Potion to buffs category.

Bug Fixes:
 - Fixed crash when renaming equipment from the equip scene.
 - Fixed scrolling on a large victory drop list causing the list to disappear.
 - Fixed Rainbow Slime's ATK Up animation still showing after being defeated.
 - Fixed missing battlebacks in some towns during Catalyst ambushes.
 - Fixed Flashbang tooltip.
 - Fixed typo on rich presence battle status.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 15.3 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15.3 (2/6/2025)