@@ -17160,6 +17160,23 @@
               ]
             },
             {
+              "code": 101,
+              "indent": 0,
+              "parameters": [
+                "",
+                0,
+                0,
+                2
+              ]
+            },
+            {
+              "code": 401,
+              "indent": 0,
+              "parameters": [
+                "Now that Dilong has been defeated, Baby Dragons will drop \\ii[199]\\c[0]s!"
+              ]
+            },
+            {
               "code": 355,
               "indent": 0,
               "parameters": [
