@@ -11,6 +11,7 @@ Additions:
  - Added the Optic Charm.
  - The music menu is back!
  - Fadima now sells ATK/MAT/DEF/MDF scrolls.
+ - Added a notification that Baby Dragons can drop Enchanted Dragon Scales after Dilong's defeat.
 
 Changes:
  - Rebalanced life/mana steal of staves:
